--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
+    <!-- CDN Links -->
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <!-- /CDN links -->
+
     <script defer src="/build/bundle.js"></script>
   </head>
 
